--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-layout: default
+profile: true
 ---
 
-{% capture index %}{% include index.md %}{% endcapture %}
-{{ index | markdownify }}
+{% include post-list.html %}
+{% include footer.html %}
